# QuickPlot

./: .gitignore  .jshintrc  .tern-project  CREDITS.md  QuickPlot.cabal  README.md  TODO.md  stack.yaml
examples/: BasicPlotting.hs  BasicPlotting.lhs
src/: QuickPlot.hs
src/QuickPlot/: Plotly.hs  QQ.hs  QQParser.hs  Vis.hs
src/QuickPlot/IPC/: Protocol.hs  QQ.hs  QQParser.hs  Server.hs
src/frontend/: 404.html  gridstack.css  index.html  quickplot-client.js  style.css
