name:                QuickPlot
version:             0.1.0.0
synopsis:            Quick and easy data visualization with Haskell
description:         Please see README.md
homepage:            http://github.com/tepf/QuickPlot#readme
license:             GPL-3
license-file:        LICENSE
author:              tepf
maintainer:          tepf@tutanota.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     QuickPlot
                     , QuickPlot.Plotly
                     , QuickPlot.Vis
                     , QuickPlot.IPC.Protocol
                     , QuickPlot.IPC.QQ
                     , QuickPlot.IPC.QQParser
                     , QuickPlot.IPC.Server
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , text
                     , colour
                     , snap
                     , snap-core
                     , websockets-snap
                     , websockets
                     , vector
                     , scientific
                     , attoparsec
                     , parsec
                     , template-haskell
                     , haskell-src-meta


executable BasicPlotting
  default-language:    Haskell2010
  hs-source-dirs:      examples
  main-is:             BasicPlotting.lhs
  build-depends:       base >= 4.7 && < 5
                     , QuickPlot

source-repository head
  type: git
  location: https://github.com/tepf/QuickPlot.git
