name:                QuickPlot
version:             0.1.0.0
synopsis:            Quick and easy data visualization with Haskell
description:         Please see README.md
homepage:            http://github.com/tepf/QuickPlot#readme
license:             GPL-3
license-file:        LICENSE
author:              tepf
maintainer:          tepf@tutanota.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:    README.md
data-dir:              .
data-files:            src/frontend/*.js
                     , src/frontend/*.html
                     , src/frontend/*.css
                     , src/frontend/img/*.png


library
    default-language:    Haskell2010
    hs-source-dirs:      src
    exposed-modules:     QuickPlot
                       , QuickPlot.Plotly
                       , QuickPlot.Vis
    build-depends:       base >= 4.7 && < 5
                       , aeson
                       , bytestring
                       , text
                       , colour
                       , snap
                       , snap-core
                       , websockets-snap
                       , websockets
                       , vector
                       , scientific
                       , attoparsec
                       , parsec
                       , template-haskell
                       , haskell-src-meta
    other-modules:       Paths_QuickPlot
                       , QuickPlot.IPC.Protocol
                       , QuickPlot.IPC.QQ
                       , QuickPlot.IPC.QQParser
                       , QuickPlot.IPC.Server


flag buildExamples
    description: Build example executables
    default:     False


executable BasicPlotting
    if flag(buildExamples)
        build-depends:       base >= 4.7 && < 5
                           , QuickPlot
    else
        default-language:    Haskell2010
        hs-source-dirs:      examples
        main-is:             BasicPlotting.lhs
        buildable: False


source-repository head
  type: git
  location: https://github.com/tepf/QuickPlot.git
