name:                QuickPlot
version:             0.1.0.1
synopsis:            Quick and easy data visualization with Haskell
description:         Please see README.md
homepage:            http://github.com/tepf/QuickPlot#readme
license:             GPL-3
license-file:        LICENSE
author:              tepf
maintainer:          tepf@tutanota.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:    README.md
data-dir:              .
data-files:            src/frontend/*.js
                     , src/frontend/*.html
                     , src/frontend/*.css
                     , src/frontend/img/*.png


library
    default-language:    Haskell2010
    hs-source-dirs:      src
    exposed-modules:     QuickPlot
                       , QuickPlot.Plotly
                       , QuickPlot.Vis
    build-depends:       base >= 4.7 && < 5
                       , aeson >= 0.9.0.1
                       , bytestring >= 0.10.6
                       , text >= 1.2.2
                       , snap >= 0.14.0.6
                       , snap-core >= 0.9.8
                       , websockets-snap >= 0.9.2
                       , websockets >= 0.9.6.1
                       , vector >= 0.11
                       , scientific >= 0.3.4.4
                       , attoparsec >= 0.13.0.1
                       , parsec >= 3.1.9
                       , template-haskell >= 2.10
                       , haskell-src-meta >= 0.6.0.13
    other-modules:       Paths_QuickPlot
                       , QuickPlot.IPC.Protocol
                       , QuickPlot.IPC.QQ
                       , QuickPlot.IPC.QQParser
                       , QuickPlot.IPC.Server


flag buildExamples
    description: Build example executables
    default:     False


executable BasicPlotting
    if flag(buildExamples)
        build-depends:       base >= 4.7 && < 5
                           , QuickPlot
    else
        default-language:    Haskell2010
        hs-source-dirs:      examples
        main-is:             BasicPlotting.lhs
        buildable: False


source-repository head
  type: git
  location: https://github.com/tepf/QuickPlot.git
